--- a/35/index.html
+++ b/35/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
+<meta charset="utf-5" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Autumn · Barcelona · Eu’s 35</title>
+<title> Eu’s 35</title>
 <style>
   :root{
     --bg1:#0b1020; --bg2:#13264e; --sun:#ffd27a; --leaf:#34d399;
