--- a/35/index.html
+++ b/35/index.html
@@ -127,7 +127,7 @@
 
 <script>
   // ===== Headline with clickable E/e =====
-  const HEADLINE_TEXT = "Autumn · Barcelona · Eu’s 35";
+  const HEADLINE_TEXT = "Eu’s 35";
   const hl = document.getElementById('headline');
   hl.innerHTML = [...HEADLINE_TEXT].map(ch=>{
     const isE = /e/i.test(ch);
