--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     text-align: center;
     padding: 32px 16px;
   }
-  img {
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    object-fit: cover;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    margin-bottom: 24px;
-  }
+img {
+  width: 200px;
+  height: auto;
+  border-radius: 16px;
+  object-fit: cover;
+  box-shadow: 0 12px 40px rgba(0,0,0,0.15);
+  margin-bottom: 24px;
+  backdrop-filter: blur(4px);
+}
   h1 {
     font-size: clamp(24px, 5vw, 36px);
     margin: 0 0 8px;
