--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     padding: 32px 16px;
   }
 img {
-  width: 200px;
-  height: auto;
-  border-radius: 16px;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
   object-fit: cover;
-  box-shadow: 0 12px 40px rgba(0,0,0,0.15);
-  margin-bottom: 24px;
-  backdrop-filter: blur(4px);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.12);
+  margin: -12px 0 24px; /* <- sube o baja la foto con este valor */
 }
   h1 {
     font-size: clamp(24px, 5vw, 36px);
